--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,10 @@ body {
   color: var(--main-txt-cl);
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -697,16 +701,24 @@ p {
 /* -- HEADER -- */
 .header {
   border-bottom: 1px solid #ECECEC;
+  position: relative;
 }
 
 .header-logo {
   text-decoration: none;
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: var(--ls-primary);
   color: var(--accent-cl);
+}
+
+@media screen and (min-width: 1200px) {
+  .header-logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .header-logo__title--black {
@@ -714,10 +726,6 @@ p {
 }
 
 /* Main Nav */
-.header {
-  position: relative;
-}
-
 .main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -725,16 +733,53 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .menu-button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin: 0;
+  margin-right: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 0;
   border: none;
   background-color: transparent;
+}
+
+.menu-button:hover, .menu-button:focus {
+  fill: var(--accent-cl);
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
 }
 
 .menu-button .icon-close {
@@ -751,19 +796,40 @@ p {
 
 .menu-container {
   display: none;
-  position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
-  height: 796px;
-  background-color: aquamarine;
-  padding: 20px;
   text-align: center;
   font-size: 20px;
 }
 
 .menu-container.is-open {
   display: block;
+}
+
+@media screen and (max-width: 767.98px) {
+  .menu-container {
+    position: absolute;
+    background-color: #ffffff;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-container {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 /* Site Nav */
@@ -827,19 +893,38 @@ p {
 }
 
 /* Header Group */
-.header-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  margin-left: auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (min-width: 768px) {
+  .header-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 21px;
+    padding-bottom: 11px;
+    margin-left: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-group {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: auto;
+  }
 }
 
 .header-group__link {
-  margin-left: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -847,8 +932,8 @@ p {
       -ms-flex-align: center;
           align-items: center;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: var(--ls-second);
   color: var(--secondary-txt-cl);
   text-decoration: none;
@@ -856,17 +941,77 @@ p {
   transition: color var(--animation);
 }
 
-.header-group__link:not(:last-child) {
-  margin-left: 0;
-}
-
 .header-group__link:hover, .header-group__link:focus {
   color: var(--accent-cl);
 }
 
+@media screen and (min-width: 768px) {
+  .header-group__link {
+    margin-bottom: 10px;
+  }
+  .header-group__link:not(:last-child) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-group__link {
+    font-size: 14px;
+    line-height: 1.14;
+    margin-left: 30px;
+  }
+  .header-group__link:not(:last-child) {
+    margin-left: 0;
+  }
+}
+
 .header-group__icon {
   fill: currentColor;
-  margin-right: 10px;
+  margin-right: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-group__icon {
+    margin-right: 10px;
+  }
+}
+
+.header-group__link .icon-envelope {
+  width: 14px;
+  height: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-group__link .icon-envelope {
+    width: 14px;
+    height: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-group__link .icon-envelope {
+    width: 16px;
+    height: 12px;
+  }
+}
+
+.header-group__link .icon-smartphone {
+  width: 10px;
+  height: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-group__link .icon-smartphone {
+    width: 10px;
+    height: 16px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-group__link .icon-smartphone {
+    width: 10px;
+    height: 16px;
+  }
 }
 
 /* -- HERO -- */
