--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -15,6 +15,10 @@ body {
     color: var(--main-txt-cl);    
 }
 
+body.modal-open {
+    overflow: hidden;
+}
+
 .section {
     padding-top: 60px;
     padding-bottom: 60px;
