--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -6,6 +6,10 @@
     left: 0;
     width: 100%;
     height: 100%;
+
+// padding: 50px 30px;
+// overflow-y: scroll;
+
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity var(--animation), visibility var(--animation);
     &.is-hidden {
@@ -33,7 +37,15 @@
                 0px 2px 1px rgba(0, 0, 0, 0.2);
                 
     transition: transform var(--animation), opacity var(--animation);           
-
+    
+    // @media screen and (min-width: 600px) {
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 50%;
+    //     transform: translate(-50%, -50%);
+    //     max-width: 500px;
+    //     width: 100%;   
+    // }
 }
 
 /* Start */
