--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,17 +1,27 @@
 /* -- HEADER -- */
 
 .header {
-    border-bottom: 1px solid #ECECEC
+    border-bottom: 1px solid #ECECEC;
+    position: relative;
 }
 
 .header-logo {
     text-decoration: none;
     font-family: var(--secondary-font);
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: var(--ls-primary);
     color: var(--accent-cl);
+
+    // @include mq(tablet) {
+    
+    // }
+
+    @include mq(desktop) {
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
 .header-logo__title--black {
@@ -19,38 +29,80 @@
 }
 
 /* Main Nav */
-.header {
-    position: relative;
-}
 
 .main-nav {
+    
     display: flex;
     align-items: center; 
+    justify-content: space-between;
+    // min-height: 80px;
 
-    // @media screen and (max-width: 767.98px) {    
+//     // @media screen and (max-width: 767.98px) {    
         
-    // }
+//     // }
 
-    // @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+//     // @media screen and (min-width: 768px) and (max-width: 1199.98px) {
         
-    // }
+//     // }
 
-    // @media screen and (min-width: 1200px) {
+//     // @media screen and (min-width: 1200px) {
           
-    // }
+//     // }
+
+@include mq(tablet) {
+    display: flex;
+    align-items: center; 
+    
+}
+
+@include mq(desktop) {
+    display: flex;
+    align-items: center; 
+}
      
 }
 
+// .drop-menu {
+//     display: flex;
+//     flex-direction: row;
+//     @include mq(tablet) {
+//         // display: none;
+       
+//     }
+    
+//     @include mq(desktop) {
+       
+//     }
+
+// }
+
 .menu-button {
     display: inline-flex;
-    margin: 0;
+    margin-right: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 0;
     border: none;
     background-color: transparent;
+
+    &:hover,
+    &:focus {
+        fill: var(--accent-cl);
+    }
+
+    @include mq(tablet) {
+        display: none;
+        
+    }
+    
+    @include mq(desktop) {
+        
+    }
 }
 
 .menu-button .icon-close {
     display: none;
+    
 }
 
 .menu-button.is-open .icon-close {
@@ -64,27 +116,58 @@
 .menu-container {
     display: none;
 
-    position: absolute;
+    
+    
     top: 100%;
     left: 0;
     width: 100%;
-    height: 796px;
 
-    background-color: aquamarine;
-    padding: 20px;
+    // height: 400px;
+
+    // 
+    // padding: 20px;
     text-align: center;
     font-size: 20px;
 
     &.is-open {
         display: block;
     }
+
+    @media screen and (max-width: 767.98px) {
+        position: absolute;
+        background-color: #ffffff;
+        
+    }
+
+    @include mq(tablet) {
+        display: flex;
+        padding: 0;
+        margin: 0;
+        
+
+       
+    }
+    
+    @include mq(desktop) {
+       align-items: baseline;
+    }
+
+    // z-index: 999;
+
+    // transform: translateY(100%);
 }
+
+// .menu-container.is-open {
+//     transform: translateY(0);
+// }
 
 /* Site Nav */
 
 .site-nav {
     display: flex;
     margin-left: 93px;
+
+    // outline: 1px solid palevioletred;
 }
 
 .site-nav__item {
@@ -147,33 +230,67 @@
 /* Header Group */
 
 .header-group {
-    display: flex;
-    padding: 0;
-    margin-left: auto;
-    align-items: center;
+    // display: none;
+    // padding: 0;
+    
+    // align-items: center;
+    // outline: 1px solid teal;
+
+    @include mq(tablet) {
+        display: flex;
+        padding-top: 21px;
+        padding-bottom: 11px;
+        margin-left: auto;
+        flex-direction: column;
+        align-items: stretch;
+       
+    }
+    
+    @include mq(desktop) {
+       flex-direction: row;
+       align-items: center;
+       margin-left: auto;
+    //    margin-right: 15px;
+    }
 }
 
 .header-group__link {
-    margin-left: 30px;
+    
 
     display: flex;
     align-items: center;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: var(--ls-second);
     
     color: var(--secondary-txt-cl);
     text-decoration: none;
     transition: color var(--animation);
 
-    &:not(:last-child) {
-        margin-left: 0;
-    }
-
     &:hover,
     &:focus {
         color: var(--accent-cl);
+    }
+
+    @include mq(tablet) {
+
+        margin-bottom: 10px;
+
+        &:not(:last-child) {
+            margin-bottom: 0px;
+        }
+    }
+    
+    @include mq(desktop) {
+        font-size: 14px;
+        line-height: 1.14;
+        margin-left: 30px;
+
+        &:not(:last-child) {
+            margin-left: 0;
+        }
+        
     }
 }
 
@@ -181,5 +298,46 @@
 
 .header-group__icon {
     fill: currentColor;
-    margin-right: 10px;
+    margin-right: 8px;
+
+    @include mq(tablet) {
+        
+       
+    }
+    
+    @include mq(desktop) {
+        margin-right: 10px;
+        
+    }
+}
+
+.header-group__link .icon-envelope {
+    width: 14px;
+    height: 10px;
+
+    @include mq(tablet) {
+        width: 14px;
+        height: 10px; 
+    }
+    
+    @include mq(desktop) {
+        width: 16px;
+        height: 12px;
+    }
+}
+
+.header-group__link .icon-smartphone {
+    width: 10px;
+    height: 16px;
+
+    @include mq(tablet) {
+        width: 10px;
+        height: 16px; 
+    }
+    
+    @include mq(desktop) {
+        width: 10px;
+        height: 16px;
+    }
+
 }
